# ty-world

./: .clang-format  CMakeLists.txt  CMakePresets.json  ChunkEntity.cpp  ChunkEntity.hpp  benchmark.cpp  benchmark.hpp  camera.cpp  camera.hpp  chunk_entity.cpp  chunk_entity.hpp  direction.hpp  enum_math.hpp  graph.cpp  graph.hpp  light.cpp  light.hpp  main.cpp  material.cpp  material.hpp  quad.cpp  quad.hpp  render.cpp  render.hpp  shader.cpp  shader.hpp  shapes.cpp  shapes.hpp  texture.cpp  vcpkg.json
lib/: CMakeLists.txt
lib/fractal/: CMakeLists.txt
lib/fractal/benchmark/: CMakeLists.txt  benchmark.cpp
lib/fractal/include/fractal/: chunk.hpp  fractal.hpp  gradient.hpp
lib/fractal/src/: gradient.cpp
lib/hotplate/: CMakeLists.txt
lib/hotplate/include/hotplate/: camera.hpp  shader.hpp  shapes.hpp  texture.hpp
lib/hotplate/shader/: instanced_shader.vert  main_shader.frag  main_shader.vert
lib/hotplate/src/: camera.cpp  light.cpp  material.cpp  shader.cpp  shapes.cpp  texture.cpp
shaders/: main_shader.vert
